gitops/envs/secured/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parasol-secured
  labels:
    parasol.example/environment: secured
    pod-security.kubernetes.io/enforce: restricted
